[package]
name = "casaku-webhook-example"
version = "1.0.0"
edition = "2021"
description = "Secure Rust webhook receiver example for Casaku with HMAC-SHA256 verification"

[dependencies]
actix-web = "4"
actix-rt = "2"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
log = "0.4"
env_logger = "0.11"
